--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ php:
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
+  - 'curl -H "Accept: text/plain" https://security.sensiolabs.org/check_lock -F lock=@composer.lock'
 script:
   - vendor/bin/phpcs --report-full --standard=PSR2 src
   - vendor/bin/phpmd src text cleancode,codesize,controversial,design,naming,unusedcode
+  - mkdir -p build/logs
+  - vendor/bin/phpunit --verbose --coverage-clover build/logs/clover.xml
+after_script:
+  - php vendor/bin/coveralls -v
