--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "~4.2.5",
         "squizlabs/php_codesniffer": "~1.5",
-        "phpmd/phpmd": "~2.1"
+        "phpmd/phpmd": "~2.1",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-4": {
