--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script:
   - mkdir -p build/logs
   - vendor/bin/phpunit --verbose --coverage-clover build/logs/clover.xml
 after_script:
-  - php vendor/bin/coveralls -v
+  - vendor/bin/coveralls -v
