--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2.5",
+        "satooshi/php-coveralls": "dev-master",
         "squizlabs/php_codesniffer": "~1.5",
-        "phpmd/phpmd": "~2.1",
-        "satooshi/php-coveralls": "dev-master"
+        "phpmd/phpmd": "~2.1"
     },
     "autoload": {
         "psr-4": {
