interface enhancements, fixes

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "minimum-stability": "stable",
     "suggest": {
-        "adammbalogh/key-value-store-file": "For using File storage"
+        "adammbalogh/key-value-store-file": "For using File storage",
+        "adammbalogh/key-value-store-redis": "For using Redis storage"
     }
 }
