--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2.5",
+        "mockery/mockery": "~0.9.2",
         "satooshi/php-coveralls": "dev-master",
         "squizlabs/php_codesniffer": "~1.5",
         "phpmd/phpmd": "~2.1"
