memory adapter added

--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,10 @@
     },
     "minimum-stability": "stable",
     "suggest": {
+        "adammbalogh/key-value-store-null": "For using Null storage",
+        "adammbalogh/key-value-store-memory": "For using Memory storage",
         "adammbalogh/key-value-store-file": "For using File storage",
         "adammbalogh/key-value-store-memcached": "For using Memcached storage",
-        "adammbalogh/key-value-store-redis": "For using Redis storage",
-        "adammbalogh/key-value-store-null": "For using Null storage"
+        "adammbalogh/key-value-store-redis": "For using Redis storage"
     }
 }
