--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "suggest": {
         "adammbalogh/key-value-store-null": "For using Null storage",
         "adammbalogh/key-value-store-memory": "For using Memory storage",
+        "adammbalogh/key-value-store-shared-memory": "For using Shared Memory storage",
         "adammbalogh/key-value-store-file": "For using File storage",
         "adammbalogh/key-value-store-memcached": "For using Memcached storage",
         "adammbalogh/key-value-store-redis": "For using Redis storage"
