--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "adammbalogh/key-value-store-shared-memory": "For using Shared Memory storage",
         "adammbalogh/key-value-store-file": "For using File storage",
         "adammbalogh/key-value-store-memcached": "For using Memcached storage",
-        "adammbalogh/key-value-store-redis": "For using Redis storage"
+        "adammbalogh/key-value-store-redis": "For using Redis storage",
+        "adammbalogh/key-value-store-replicator": "For using Replicator adapter"
     }
 }
